Fix some layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
 	margin: 0;
 	width: 100%;
 	height: 100%;
+	overflow-y: auto;
 }
 
 body, input, textarea {
@@ -20,11 +21,8 @@ input, textarea{
 	width: 100%;
 	position: absolute;
 	left: 0;
-	bottom: 0;
-	max-height: calc(100% - 115px);
-	padding-bottom: 115px;
-	overflow-y: overlay;
-	flex-direction: column-reverse;
+	bottom: 0px;
+	max-height: 100%;
 }
 
 .card {
@@ -40,12 +38,8 @@ input, textarea{
 
 .card:last-of-type {
 	background-color: #1f1f1f;
-	position: fixed;
-	bottom: 0;
-	margin: 0 auto;
 	margin-bottom: 15px;
-	left: 0;
-	right: 0;
+	margin-top: 10px;
 }
 
 .card:focus-within {
